<resources>
    <string name="app_name">CalcNet</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">x</string>
    <string name="igual">=</string>
    <string name="divisao">÷</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="limpar">C</string>
    <string name="backspace">⌫</string>
    <string name="raiz_quadrada">√</string>
    <string name="raiz_cubica">\u221B</string>
    <string name="quadrado">x²</string>
    <string name="cubo">x\u00B3</string>
    <string name="potencia_10">10\u207F</string>
    <string name="seno">sen</string>
    <string name="cosseno">cos</string>
    <string name="tangente">tan</string>
    <string name="arcoseno">sen\u207B\u00B9</string>
    <string name="arcocoseno">cos\u207B\u00B9</string>
    <string name="arcotangente">tan\u207B\u00B9</string>
    <string name="mais_ou_menos">±</string>
    <string name="arrow">↑</string>
    <string name="potencia_x">n\u02e3</string>
    <string name="potencia_e">e\u02e3</string>
    <string name="pi">π</string>
    <string name="fatorial">x!</string>
    <string name="decimal">.</string>
    <string name="fecha_parentese">)</string>
    <string name="abre_parentese">(</string>
    <string name="porcento">%</string>
    <string name="logaritmo">log</string>
    <string name="logaritmo_neperiano">ln</string>
    <string name="nome_sim">Sim</string>
    <string name="nome_nao">Não</string>
    <string name="numero_de_euler">e</string>
    <string name="constante_elev_y">x\u02b8</string>
    <string name="dez_elev_x">10\u02e3</string>
    <string name="modulo_x">|x|</string>
    <string name="infinito">\u221e</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
