<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:keepScreenOn="true"
    android:orientation="vertical"
    app:layout_gravity="fill">

    <EditText
        android:id="@+id/editText_Math"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="false"
        android:elegantTextHeight="true"
        android:enabled="true"
        android:fadeScrollbars="false"
        android:filterTouchesWhenObscured="false"
        android:fontFamily="monospace"
        android:inputType="text"
        android:labelFor="@id/editText_Math"
        android:linksClickable="false"
        android:longClickable="false"
        android:singleLine="true"
        android:text="hello world"
        android:textColor="@android:color/holo_blue_bright" />

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="false"
        android:enabled="true"
        android:fontFamily="monospace"
        android:inputType="text"
        android:soundEffectsEnabled="true"
        android:text="hello world"
        android:textColor="@android:color/holo_blue_bright" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_weight="75"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:fadeScrollbars="false"
        android:filterTouchesWhenObscured="true"
        android:fitsSystemWindows="true"
        android:keepScreenOn="false"
        android:soundEffectsEnabled="true"
        android:textAlignment="center">

        <Button
            android:id="@+id/botao_abre_parentese"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/abre_parentese"
            app:layout_gravity="fill_horizontal"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/botao_fecha_parentese"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/fecha_parentese"
            app:layout_gravity="fill_horizontal"
            app:layout_rowWeight="0" />

        <Button
            android:id="@+id/botao_x_elevy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/constante_elev_y"
            android:textAllCaps="false"

            app:layout_rowWeight="0" />" />

        <Button
            android:id="@+id/botao_xquadrado"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/quadrado"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_log"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/logaritmo"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/logaritmo_neperiano"
            android:textAllCaps="false"
            app:layout_column="4"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/botao_raiz"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/raiz_quadrada"
            app:layout_column="4"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/botao_num_euler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/numero_de_euler"
            android:textAllCaps="false"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3" />

        <Button
            android:id="@+id/botao_arcoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:layoutDirection="inherit"
            android:onClick="OnClick"
            android:text="@string/arcoseno"
            android:textAllCaps="false"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/botao_arcocoseno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/arcocoseno"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_arcotangente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/arcotangente"
            android:textAllCaps="false"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/botao_pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/pi"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_seno"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/seno"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_cosseno"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/cosseno"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/botao_tangente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/tangente"
            android:textAllCaps="false"
            app:layout_column="4"
            app:layout_row="1" />

        <Button
            android:id="@+id/botao_sete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/sete"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="4" />

        <Button
            android:id="@+id/botao_oito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/oito"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_nove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/nove"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_divisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/divisao"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/botao_quatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/quatro"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="5" />

        <Button
            android:id="@+id/botao_cinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/cinco"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_seis"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/seis" />

        <Button
            android:id="@+id/botao_multiplicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/multiplicacao"
            android:textAllCaps="false"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_um"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/um"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="6" />

        <Button
            android:id="@+id/botao_dois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/dois"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_tres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/tres"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/botao_subtracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/subtracao"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/zero"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="7" />

        <Button
            android:id="@+id/botao_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="OnClick"
            android:text="@string/decimal"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/botao_igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:onClick="OnClick"
            android:text="@string/igual"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/botao_soma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/soma"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/botao_exp_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/potencia_e"
            android:textAllCaps="false"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/botaoClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="ac"
            app:layout_column="4"
            app:layout_gravity="fill"
            app:layout_row="6" />

        <Button
            android:id="@+id/botaoSwitchRadDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="Rad"
            app:layout_column="4"
            app:layout_gravity="fill_horizontal"
            app:layout_row="4" />

        <Button
            android:id="@+id/botaoApagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="c"
            app:layout_column="4"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="5"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="uns"
            app:layout_column="4"
            app:layout_gravity="fill"
            app:layout_row="7" />

        <Button
            android:id="@+id/botaoModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/modulo_x"
            android:textAllCaps="false"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="4" />

        <Button
            android:id="@+id/botao_dez_elevx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/dez_elev_x"
            android:textAllCaps="false"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/botao_raiz_cubica"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/raiz_cubica"
            android:textAllCaps="false"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/botao_fatorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="OnClick"
            android:text="@string/fatorial"
            android:textAllCaps="false"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <TextView />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/holo_green_light"
        android:clickable="false"
        android:fontFamily="monospace"
        android:linksClickable="false"
        android:longClickable="false"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <!--


    -->
</LinearLayout>